<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.cookidoo.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.cookidoo.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_my_recipes"
        android:name="com.example.cookidoo.ui.myrecipes.MyRecipesFragment"
        android:label="@string/title_my_recipes"
        tools:layout="@layout/fragment_my_recipes" />
    <fragment
        android:id="@+id/navigation_my_week"
        android:name="com.example.cookidoo.ui.myweek.MyWeekFragment"
        android:label="fragment_my_week"
        tools:layout="@layout/fragment_my_week" />
    <fragment
        android:id="@+id/navigation_shop_list"
        android:name="com.example.cookidoo.ui.shoplist.ShopListFragment"
        android:label="fragment_shop_list"
        tools:layout="@layout/fragment_shop_list" />
</navigation>